Updates Changes. I am gonna release 0.017 to CPAN
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2402 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Changes
 
 0.017 2009.1.3
     - Fixed syntax check to work again with Padre-Plugin-Perl6
+    - More stable, one thread solution.
 
 0.016 2009.1.3
     - Possible fix to trac ticket:194, Slow Perl6 syntax highlighting
