--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.018 2009.1.3
+    - Fixed missing dependency on IPC::Run
+    
 0.017 2009.1.3
     - Fixed syntax check to work again with Padre-Plugin-Perl6
     - More stable, one thread solution to ticket:194.
