--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.019 2009.1.3
+    - Implemented manual refresh and selective of Perl 6 syntax highlighter.
+
 0.018 2009.1.3
     - Fixed missing dependency on IPC::Run
     - Added tests
