--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,5 +1,8 @@
 Changes for Padre.
 
+v0.23 2009.01.03
+    Updated Italian transation.
+
 v0.23 ??????????
 
     Refactored the plugin state hash out into a standalone
