Updated Italian Translation... and changefile too...
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2417 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for Padre.
 
+v0.23 2009.01.03
+    Updated Italian transation.
+
 v0.23 ??????????
 
     Refactored the plugin state hash out into a standalone
