--- a/Padre/Changes
+++ b/Padre/Changes
@@ -2,6 +2,7 @@ Changes for Perl Application Development and Refactoring Environment
 
 v0.23 ??????????
 
+    View as (Highlighting File T&ype) (FAYLAND)
     Updated Italian transation.
     Refactored the plugin state hash out into a standalone
         Padre::PluginHandle class (ADAMK)
