--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes for Perl Application Development and Refactoring Environment
 
 v0.23 ??????????
 
+    Created Padre::Current, which should simplify everything that needs
+        to know about the current whatever (ADAMK)
     View as (Highlighting File T&ype) (FAYLAND)
     Updated Italian transation.
     Refactored the plugin state hash out into a standalone
