change words to "View Document As..." (by Adamk)
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2432 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@ v0.23 ??????????
 
     Created Padre::Current, which should simplify everything that needs
         to know about the current whatever (ADAMK)
-    View as (Highlighting File T&ype) (FAYLAND)
+    View Document As... (FAYLAND)
     Updated Italian transation.
     Refactored the plugin state hash out into a standalone
         Padre::PluginHandle class (ADAMK)
