--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.020 2009.1.4
+    - Fixed plugin to work with AdamK's r2436 refactoring.
+
 0.019 2009.1.3
     - Implemented manual refresh and selective of Perl 6 syntax highlighter.
 
