mention task icon in changelog
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2457 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes for Perl Application Development and Refactoring Environment
 
 v0.23 ??????????
 
+    Added a friendly icon to the ToolBar that displays the status
+        (idle, running, high load) of the background tasks (SMUELLER)
     Created Padre::Current, which should simplify everything that needs
         to know about the current whatever (ADAMK)
     Used Padre::Current to kill off the slightly out of place non-class
