updated changes. releasing 0.021
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2478 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.021 2009.1.5
+    - S29 function documentation when you hit F2 over a function (or a word)
+
 0.020 2009.1.4
     - Fixed plugin to work with AdamK's r2436 refactoring.
 
