new releases for Padre 0.23
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2481 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Padre-Plugin-HTML/Changes
+++ b/Padre-Plugin-HTML/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-HTML
 
+0.07    2009.1.5
+        for Padre 0.23
+
 0.06    2008.12.24
         comment_lines_str
 
