--- a/Padre-Plugin-AcmePlayCode/Changes
+++ b/Padre-Plugin-AcmePlayCode/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-AcmePlayCode
 
+0.06    2009.1.5
+        for Padre 0.23
+
 0.05	2008.11.24
 		for 'Padre::Plugin' => '0.18'
 
