--- a/Padre-Plugin-HTMLExport/Changes
+++ b/Padre-Plugin-HTMLExport/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-HTMLExport
 
+0.03    2009.1.5
+        for Padre 0.23
+
 0.02    2008.12.30
         Fixed it to work with Padre 0.22
         Moved to Module::Install
