--- a/Padre-Plugin-PAR/Changes
+++ b/Padre-Plugin-PAR/Changes
@@ -1,6 +1,7 @@
-0.05 2008-11-22
+0.05 2009-01-05
 
-  - Follow the API changes of Padre 0.17, be a Padre::Plugin!
+  - Follow the API changes of Padre 0.24, be a Padre::Plugin
+    and use ->current.
 
 0.04 2008-11-12
 
