--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,6 +1,8 @@
 Changes
 
-0.022 ??????????????
+0.022 2009.1.5
+    - Added S29 function documentation calltips
+    - F2 now launches the S29 documentation in your default browser
     - requires Syntax::Highlight::Perl6 0.0297
     - requires Padre 0.24
 
@@ -16,7 +18,7 @@ Changes
 0.018 2009.1.3
     - Fixed missing dependency on IPC::Run
     - Added tests
- 
+
 0.017 2009.1.3
     - Fixed syntax check to work again with Padre-Plugin-Perl6
     - More stable, one thread solution to ticket:194.
