Forgot this file once again...
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2517 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Changes for Perl Application Development and Refactoring Environment 
 
+    Updated German translation (HJANSEN)
     Replace Padre::Pod::Frame with Padre::Wx::DocBrowser, hopefully
         making help more helpful. (Andrew Bramble)
     Moving to the glorious RFC4646-based second-generation Padre::Locale
