The function list behaviour now perfectly matches the Ultraedit behaviour (move the caret within the current document to the start of the word "sub", scroll that line to the centre of the display, and focus on it)
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2520 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Perl Application Development and Refactoring Environment 
 
+    Double-clicking an entry in the function list now faithfully
+        matches the behaviour of the Ultraedit implementation (ADAMK)
     Updated German translation (HJANSEN)
     Replace Padre::Pod::Frame with Padre::Wx::DocBrowser, hopefully
         making help more helpful. (Andrew Bramble)
