next version of Perl6 plugin is going to be 0.23 with the cleanup lex cache option (which is not finished 100%)
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2527 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.023 ??????????????????????
+    - Added the lex cache directory cleanup menu option
+
 0.022 2009.1.5
     - Added S29 function documentation calltips
     - F2 now launches the S29 documentation in your default browser
