--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Changes
 
-0.023 ??????????????????????
-    - Added the lex cache directory cleanup menu option
+0.023 2009.1.6
+    - Added the lex cache directory cleanup option
 
 0.022 2009.1.5
     - Added S29 function documentation calltips
