--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,5 +1,8 @@
 Changes for Perl Application Development and Refactoring Environment 
 
+    Now that Padre::DocBrowser has landed, delete the Padre::Pod
+        family of modules (ADAMK)
+
 v0.24 2009.01.06
 
     Double-clicking an entry in the function list now faithfully
