Fix translation: hotkeys (like Ctrl-a) were unusable with the comments in place when using German locale
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@2538 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Padre/share/locale/de.po
+++ b/Padre/share/locale/de.po
@@ -1249,11 +1249,11 @@ msgstr "Test beendet"
 msgid "Check cancelled"
 msgstr "Check abgebrochen"
 
-#~ msgid "ctrl"
-#~ msgstr "strg"
+msgid "ctrl"
+msgstr "strg"
 
-#~ msgid "shift"
-#~ msgstr "umschalt"
+msgid "shift"
+msgstr "umschalt"
 
-#~ msgid "alt"
-#~ msgstr "alt"
+msgid "alt"
+msgstr "alt"
