Moving the menu classes closer to their underlying Wx class names
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2539 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
-Changes for Perl Application Development and Refactoring Environment 
+Changes for Perl Application Development and Refactoring Environment
 
+    Class correction Padre::Wx::Menu -> Padre::Wx::Menubar (ADAMK)
+    Class correction Padre::Wx::Submenu -> Padre::Wx::Menu (ADAMK)
     Now that Padre::DocBrowser has landed, delete the Padre::Pod
         family of modules (ADAMK)
 
