--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.024 2009.1.???????????????????
+    - Fix run rakudo script on win32
+
 0.023 2009.1.6
     - Added the lex cache directory cleanup option
 
