Removed todos and fixed bug for running rakudo on win32
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2560 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes
 
+0.024 2009.1.???????????????????
+    - Fix run rakudo script on win32
+
 0.023 2009.1.6
     - Added the lex cache directory cleanup option
 
