Implementing CPAN Config editing and basic CPAN module installation, using the same mechanism as Padre::Plugin::CPAN
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2580 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Perl Application Development and Refactoring Environment
 
-    Implemented 
+    Moved Padre::Plugin::CPAN functionality into the core so that
+        we can do various sorts of tighter integration (ADAMK)
     Padre::Wx::DocBrowser now uses Padre::Task::DocBrowser (let's 
         hope properly) (Andrew Bramble) 
     Class correction Padre::Wx::Menu -> Padre::Wx::Menubar (ADAMK)
