--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,5 +1,10 @@
 Changes
 
+0.025 2009.1.7
+    - Fix S29-function.pod parsing case sensitivity bug on *nix platforms.
+    - Fix STD.pm highlighting to actually work. ;-)
+    - STD.pm errors/warnings are shown on console.
+
 0.024 2009.1.7
     - Fix run rakudo script on win32
     - STD.pm is now syntax highlighted correctly since we use IPC::Run3 binmode utf8
