Fix S29-function.pod parsing case sensitivity bug on *nix platforms, check 0.25 changes for more..
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2584 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes
 
+0.025 2009.1.7
+    - Fix S29-function.pod parsing case sensitivity bug on *nix platforms.
+    - Fix STD.pm highlighting to actually work. ;-)
+    - STD.pm errors/warnings are shown on console.
+
 0.024 2009.1.7
     - Fix run rakudo script on win32
     - STD.pm is now syntax highlighted correctly since we use IPC::Run3 binmode utf8
