--- a/Padre-Plugin-Encode/Changes
+++ b/Padre-Plugin-Encode/Changes
@@ -1,7 +1,12 @@
 Revision history for Padre-Plugin-Encode
 
-0.1.2  Tue Jan  6 00:30:07 KST 2009
-       Add more encodings
+0.1.3   Thu Jan  8 03:27:54 KST 2009
+        Support for Padre 0.24
+        Add "Encoding document to System Default"
+        Print log messages to "Output Panel"
+
+0.1.2   Tue Jan  6 00:30:07 KST 2009
+        Add more encodings
         cp932
         cp949
         euc-jp
@@ -9,6 +14,6 @@ Revision history for Padre-Plugin-Encode
         shift-jis
         utf-8
 
-0.1.1  Mon Jan  5 18:39:31 KST 2009
-       Initial release for Padre 0.23
+0.1.1   Mon Jan  5 18:39:31 KST 2009
+        Initial release for Padre 0.23
 
