--- a/Padre-Plugin-Encode/README
+++ b/Padre-Plugin-Encode/README
@@ -2,11 +2,12 @@ NAME
     Padre::Plugin::Encode - convert file to different encoding in Padre
 
 VERSION
-    This document describes Padre::Plugin::Encode version 0.1.2
+    This document describes Padre::Plugin::Encode version 0.1.3
 
 SYNOPSIS
         $>padre
         Plugins -> Convert Encode -> 
+                                     Encode document to System Default
                                      Encode document to utf-8
                                      Encode document to ...
 
