Remove ANSI color escape sequences from STD.pm warnings/errors
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2590 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes
 
 0.025 2009.1.7
+    - Remove ANSI color escape sequences from STD.pm warnings/errors
     - Fix S29-function.pod parsing case sensitivity bug on *nix platforms.
     - Fix STD.pm highlighting to actually work. ;-)
     - STD.pm errors/warnings are shown on console.
