updated changes for cpan release 0.25 and fixed STD.pm parsing for export and colorize (Yay!)
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre-Plugin-Perl6@2595 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes
 
-0.025 2009.1.7
+0.025 2009.1.8
+    - Depends on Syntax::Highlight::Perl6 0.30 which fixes hilitep6 binmode STDIN issue for utf8
     - Limit number of S29 function calltip text to the first 10 lines.
     - Remove ANSI color escape sequences from STD.pm warnings/errors.
     - Fix S29-function.pod parsing case sensitivity bug on *nix platforms.
