--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,6 +1,7 @@
 Changes
 
-0.025 2009.1.7
+0.025 2009.1.8
+    - Depends on Syntax::Highlight::Perl6 0.30 which fixes hilitep6 binmode STDIN issue for utf8
     - Limit number of S29 function calltip text to the first 10 lines.
     - Remove ANSI color escape sequences from STD.pm warnings/errors.
     - Fix S29-function.pod parsing case sensitivity bug on *nix platforms.
