Completing the movement of the function list into a standalone class
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2602 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Changes for Perl Application Development and Refactoring Environment
 
+    All big MainWindow gui elements are now in their own classes,
+        which should help us spread out feature logic properly (ADAMK)
     Moved Padre::Plugin::CPAN functionality into the core so that
-        we can do various sorts of tighter integration (ADAMK)
+        we can do various sorts of tighter CPAN integration (ADAMK)
     Padre::Wx::DocBrowser now uses Padre::Task::DocBrowser (let's 
         hope properly) (Andrew Bramble) 
     Class correction Padre::Wx::Menu -> Padre::Wx::Menubar (ADAMK)
