Adding Gnome 2.18 icon set, as a starting point for getting rid of Tango. Cleared out the tango icons we don't use anyway.
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/Padre@2612 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for Perl Application Development and Refactoring Environment
 
+    Our unattributed redistribution of tango was probably illegal,
+        and made us incompatible with Debian. Switch to gnome for
+        now. They are as ugly as sin, but at least they're legal (ADAMK)
     All big MainWindow gui elements are now in their own classes,
         which should help us spread out feature logic properly (ADAMK)
     Moved Padre::Plugin::CPAN functionality into the core so that
