--- a/Padre/share/locale/zh_cn.po
+++ b/Padre/share/locale/zh_cn.po
@@ -1,19 +1,19 @@
-# Chinese (Simplified) for PACKAGE package.
+# Chinese translations for PACKAGE package
+# PACKAGE 软件包的简体中文翻译.
 # Copyright (C) 2009 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Fayland Lam <fayland@gmail.com>, 2009.
+#  <fayland@gmail.com>, 2009.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-08 05:24+0800\n"
-"PO-Revision-Date: 2009-01-08 05:24+0800\n"
-"Last-Translator: Fayland Lam <fayland@gmail.com>\n"
-"Language-Team: Chinese (Simplified)\n"
+"POT-Creation-Date: 2009-01-08 05:24+0900\n"
+"PO-Revision-Date: 2009-01-08 20:15-0500\n"
+"Last-Translator:  <fayland@gmail.com>\n"
+"Language-Team: Chinese\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: lib/Padre/Locale.pm:71
